# nishbox

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CONTRIBUTORS.md  COPYING  Jenkinsfile  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  Rules  aclocal.m4  build-windows.sh  common-automake.mk  common.mk  config.status  configure  configure.ac  docgen.conf  include_order.c  install.nsi  install.sh  premake5.lua
data/: COPYING  autoexec.cfg  control.cfg
engine/: COPYING  Doxyfile  GLFW_draw.c  GLX_draw.c  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  WGL_draw.c  common.rc  core.c  draw.c  engine.rc  font.c  gf_audio.c  gf_client.c  gf_core.c  gf_draw_common.c  gf_font.c  gf_graphic_common.c  gf_gui.c  gf_input.c  gf_jar_mod.c  gf_jar_xm.c  gf_log.c  gf_math.c  gf_miniaudio.c  gf_model.c  gf_physics.c  gf_texture.c  gf_version.c  log.c  math.c  nb_GLFW_draw.c  nb_GLX_draw.c  nb_OPENGL_driver.c  nb_OPENGL_graphic.c  nb_WGL_draw.c  nb_core.c  (+37 more)
engine/OPENGL/: nb_driver.c  nb_graphic.c
engine/OPENGL/GLFW/: nb_draw.c
engine/OPENGL/GLX/: nb_draw.c
engine/OPENGL/WGL/: nb_draw.c
engine/audio/: gf_audio_mod.c
engine/graphic/OPENGL/: nb_driver.c  nb_graphic.c
engine/graphic/OPENGL/GLFW/: ne_draw.c
engine/graphic/OPENGL/GLX/: nb_draw.c  ne_draw.c
engine/graphic/OPENGL/WGL/: nb_draw.c  ne_draw.c
engine/graphic/directx/: gf_driver.c  gf_graphic.c
engine/graphic/directx/dx11/: gf_draw.c
engine/graphic/opengl/: gf_driver.c  gf_graphic.c  ne_driver.c  ne_graphic.c
engine/graphic/opengl/glfw/: gf_draw.c
engine/graphic/opengl/glx/: gf_draw.c  ne_draw.c
engine/graphic/opengl/wgl/: gf_draw.c
engine/include/: gf_assert.h  gf_audio.h  gf_client.h  gf_core.h  gf_directx.h  gf_draw.h  gf_draw_driver.h  gf_draw_platform.h  gf_file.h  gf_font.h  gf_graphic.h  gf_gui.h  gf_gui_component.h  gf_gui_static.h  gf_input.h  gf_log.h  gf_lua.h  gf_macro.h  gf_math.h  gf_mesh.h  gf_model.h  gf_opengl.h  gf_physics.h  gf_pre.h  gf_prop.h  gf_resource.h  gf_server.h  gf_texture.h  gf_thread.h  gf_version.h  nb_core.h  nb_draw.h  nb_draw_driver.h  nb_font.h  nb_graphic.h  nb_log.h  nb_macro.h  nb_mesh.h  nb_texture.h  nb_thread.h  (+16 more)
engine/include/gf_type/: audio.h  client.h  compat.h  core.h  draw.h  draw_driver.h  draw_platform.h  file.h  font.h  graphic.h  gui.h  input.h  lua.h  math.h  mesh.h  model.h  physics.h  prop.h  resource.h  server.h  texture.h  thread.h  version.h
engine/include/nb_type/: draw.h  draw_driver.h  draw_platform.h  mesh.h  model.h  physics.h  texture.h  thread.h  version.h
engine/include/ne_type/: core.h  draw.h  draw_driver.h  draw_platform.h  math.h  mesh.h  model.h  physics.h  texture.h  thread.h  version.h
engine/misc/: relation.gv
engine/nb_type/: core.h  draw.h  draw_driver.h  draw_platform.h  math.h  texture.h  version.h
engine/src/: engine.rc  gf_assert.c  gf_audio.c  gf_client.c  gf_core.c  gf_draw_common.c  gf_file.c  gf_font.c  gf_graphic_common.c  gf_gui.c  gf_input.c  gf_log.c  gf_lua.c  gf_math.c  gf_mesh.c  gf_physics.c  gf_prop.c  gf_resource.c  gf_server.c  gf_texture.c  gf_version.c  premake5.lua
engine/src/audio/: gf_audio_xm.c
engine/src/graphic/directx/: gf_graphic.c
engine/src/graphic/directx/dx11/: gf_draw.c
engine/src/graphic/opengl/: gf_driver.c  gf_graphic.c
engine/src/graphic/opengl/gdi/: gf_draw.c
engine/src/graphic/opengl/glx/: gf_draw.c
engine/src/graphic/opengl/rgfw/: gf_draw.c
engine/src/graphic/opengl/wgl/: gf_draw.c
engine/src/graphic/opengl/x11/: gf_draw.c
engine/src/gui/: gf_gui_button.c  gf_gui_frame.c  gf_gui_text.c  gf_gui_window.c
engine/src/lua/: gf_lua.c  gf_lua_audio.c  gf_lua_font.c  gf_lua_graphic.c  gf_lua_gui.c  gf_lua_metatable.c  gf_lua_metatable_audio.c  gf_lua_metatable_font.c  gf_lua_metatable_gui.c
engine/src/thread/posix/: gf_thread.c
engine/src/thread/win32/: gf_thread.c
engine/thread/POSIX/: nb_thread.c
engine/thread/WIN32/: nb_thread.c
engine/thread/posix/: gf_thread.c  ne_thread.c
engine/thread/win32/: gf_thread.c  ne_thread.c
engine/util/: premake5.lua
engine/util/engineinfo/: engineinfo.rc  main_console.c  main_windows.c
engine/util/pack/: pack.c  pack.rc
misc/: relation.gv
mk/: p_default.mk  p_windows.mk
music/: README.md  (+6 more)
(+42 files in other folders)
