include $(top_srcdir)/common-automake.mk
lib_LIBRARIES = libnishbox.a
libnishbox_a_SOURCES = nb_core.c nb_draw_common.c nb_font.c nb_log.c nb_math.c nb_mesh.c nb_model.c nb_physics.c nb_stb_image.c nb_texture.c nb_version.c $(NB_DRIVER)/nb_driver.c $(NB_DRIVER)/nb_graphics.c $(NB_DRIVER)/$(NB_BACKEND)/nb_draw.c
